EPOS/Microsoft Visual Basic/Example VB 2010 64-Bit/Definitions.vb


'Advanced Functions
Declare Function VCS_ReadDataBuffer Lib "EposCmd64.dll" Alias "VCS_ReadDataBuffer" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pDataBuffer_FirstElement As Byte, ByVal BufferSizeToRead As UInteger, ByRef pBufferSizeRead As UInteger, ByRef pVectorStartOffset As UShort, ByRef pMaxNbOfSamples As UShort, ByRef pNbOfRecordedSamples As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ExtractChannelDataVector Lib "EposCmd64.dll" Alias "VCS_ExtractChannelDataVector" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ChannelNumber As Byte, ByRef pDataBuffer_FirstElement As Byte, ByVal BufferSize As UInteger, ByRef pDataVectorBuffer_FirstElement As Byte, ByVal VectorBufferSize As UInteger, ByVal VectorStartOffset As UShort, ByVal MaxNbOfSamples As UShort, ByVal NbOfRecordedSamples As UShort, ByRef pErrorCode As UInteger) As Integer

'*************************************************************************************************************************************
' LOW LAYER FUNCTIONS
'************************************************************************************************************************************/

'CanLayer Functions
Declare Function VCS_SendCANFrame Lib "EposCmd64.dll" Alias "VCS_SendCANFrame" (ByVal KeyHandle As Integer, ByVal CobID As UShort, ByVal Length As UShort, ByRef pData_FirstElement As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ReadCANFrame Lib "EposCmd64.dll" Alias "VCS_ReadCANFrame" (ByVal KeyHandle As Integer, ByVal CobID As UShort, ByVal Length As UShort, ByRef pData_FirstElement As Byte, ByVal Timeout As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_RequestCANFrame Lib "EposCmd64.dll" Alias "VCS_RequestCANFrame" (ByVal KeyHandle As Integer, ByVal CobID As UShort, ByVal Length As UShort, ByRef pData_FirstElement As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SendNMTService Lib "EposCmd64.dll" Alias "VCS_SendNMTService" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal CommandSpecifier As UShort, ByRef pErrorCode As UInteger) As Integer

'*************************************************************************************************************************************
' TYPE DEFINITIONS
'************************************************************************************************************************************/

'Communication
    'Dialog Mode
    Const DM_PROGRESS_DLG As Integer = 0
    Const DM_PROGRESS_AND_CONFIRM_DLG As Integer = 1
    Const DM_CONFIRM_DLG As Integer = 2
    Const DM_NO_DLG As Integer = 3

'Configuration
    'MotorType
    Const MT_DC_MOTOR As UShort = 1
    Const MT_EC_SINUS_COMMUTATED_MOTOR As UShort = 10
    Const MT_EC_BLOCK_COMMUTATED_MOTOR As UShort = 11

    'SensorType
    Const ST_UNKNOWN As UShort = 0
    Const ST_INC_ENCODER_3CHANNEL As UShort = 1
    Const ST_INC_ENCODER_2CHANNEL As UShort = 2
    Const ST_HALL_SENSORS As UShort = 3
    Const ST_SSI_ABS_ENCODER_BINARY As UShort = 4
    Const ST_SSI_ABS_ENCODER_GREY As UShort = 5
    Const ST_INC_ENCODER2_3CHANNEL As UShort = 6
    Const ST_INC_ENCODER2_2CHANNEL As UShort = 7
    Const ST_ANALOG_INC_ENCODER_3CHANNEL As UShort = 8
    Const ST_ANALOG_INC_ENCODER_2CHANNEL As UShort = 9

'In- and outputs
    'Digital input configuration
    Const DIC_NEGATIVE_LIMIT_SWITCH As UShort = 0
    Const DIC_POSITIVE_LIMIT_SWITCH As UShort = 1
    Const DIC_HOME_SWITCH As UShort = 2
    Const DIC_POSITION_MARKER As UShort = 3
    Const DIC_DRIVE_ENABLE As UShort = 4
    Const DIC_QUICK_STOP As UShort = 5
    Const DIC_GENERAL_PURPOSE_J As UShort = 6
    Const DIC_GENERAL_PURPOSE_I As UShort = 7
    Const DIC_GENERAL_PURPOSE_H As UShort = 8
    Const DIC_GENERAL_PURPOSE_G As UShort = 9
    Const DIC_GENERAL_PURPOSE_F As UShort = 10
    Const DIC_GENERAL_PURPOSE_E As UShort = 11
    Const DIC_GENERAL_PURPOSE_D As UShort = 12
    Const DIC_GENERAL_PURPOSE_C As UShort = 13
    Const DIC_GENERAL_PURPOSE_B As UShort = 14
    Const DIC_GENERAL_PURPOSE_A As UShort = 15

    'Digital output configuration
    Const DOC_READY_FAULT As UShort = 0
    Const DOC_POSITION_COMPARE As UShort = 1
    Const DOC_GENERAL_PURPOSE_H As UShort = 8
    Const DOC_GENERAL_PURPOSE_G As UShort = 9
    Const DOC_GENERAL_PURPOSE_F As UShort = 10
    Const DOC_GENERAL_PURPOSE_E As UShort = 11
    Const DOC_GENERAL_PURPOSE_D As UShort = 12
    Const DOC_GENERAL_PURPOSE_C As UShort = 13
    Const DOC_GENERAL_PURPOSE_B As UShort = 14
    Const DOC_GENERAL_PURPOSE_A As UShort = 15

    'Analog input configuration
    Const AIC_ANALOG_CURRENT_SETPOINT As UShort = 0
    Const AIC_ANALOG_VELOCITY_SETPOINT As UShort = 1
    Const AIC_ANALOG_POSITION_SETPOINT As UShort = 2
    Const AIC_GENERAL_PURPOSE_H As UShort = 8
    Const AIC_GENERAL_PURPOSE_G As UShort = 9
    Const AIC_GENERAL_PURPOSE_F As UShort = 10
    Const AIC_GENERAL_PURPOSE_E As UShort = 11
    Const AIC_GENERAL_PURPOSE_D As UShort = 12
    Const AIC_GENERAL_PURPOSE_C As UShort = 13
    Const AIC_GENERAL_PURPOSE_B As UShort = 14
    Const AIC_GENERAL_PURPOSE_A As UShort = 15

    'Analog output configuration
    Const AOC_GENERAL_PURPOSE_A As UShort = 0
    Const AOC_GENERAL_PURPOSE_B As UShort = 1

'Units
    'VelocityDimension
    Const VD_RPM As Byte = &HA4

    'VelocityNotation
    Const VN_STANDARD As SByte = 0
    Const VN_DECI As SByte = -1
    Const VN_CENTI As SByte = -2
    Const VN_MILLI As SByte = -3

'Operational mode
    Const OMD_PROFILE_POSITION_MODE As SByte = 1
    Const OMD_PROFILE_VELOCITY_MODE As SByte = 3
    Const OMD_HOMING_MODE As SByte = 6
    Const OMD_INTERPOLATED_POSITION_MODE As SByte = 7
    Const OMD_POSITION_MODE As SByte = -1
    Const OMD_VELOCITY_MODE As SByte = -2
    Const OMD_CURRENT_MODE As SByte = -3
    Const OMD_MASTER_ENCODER_MODE As SByte = -5
    Const OMD_STEP_DIRECTION_MODE As SByte = -6

'States
    Const ST_DISABLED As UShort = 0
    Const ST_ENABLED As UShort = 1
    Const ST_QUICKSTOP As UShort = 2
    Const ST_FAULT As UShort = 3

'Homing mode
    'Homing method
    Const HM_ACTUAL_POSITION As SByte = &H23
    Const HM_NEGATIVE_LIMIT_SWITCH As SByte = 17
    Const HM_NEGATIVE_LIMIT_SWITCH_AND_INDEX As SByte = 1
    Const HM_POSITIVE_LIMIT_SWITCH As SByte = 18
    Const HM_POSITIVE_LIMIT_SWITCH_AND_INDEX As SByte = 2
    Const HM_HOME_SWITCH_POSITIVE_SPEED As SByte = 23
    Const HM_HOME_SWITCH_POSITIVE_SPEED_AND_INDEX As SByte = 7
    Const HM_HOME_SWITCH_NEGATIVE_SPEED As SByte = 27
    Const HM_HOME_SWITCH_NEGATIVE_SPEED_AND_INDEX As SByte = 11
    Const HM_CURRENT_THRESHOLD_POSITIVE_SPEED As SByte = -3
    Const HM_CURRENT_THRESHOLD_POSITIVE_SPEED_AND_INDEX As SByte = -1
    Const HM_CURRENT_THRESHOLD_NEGATIVE_SPEED As SByte = -4
    Const HM_CURRENT_THRESHOLD_NEGATIVE_SPEED_AND_INDEX As SByte = -2
    Const HM_INDEX_POSITIVE_SPEED As SByte = 34
    Const HM_INDEX_NEGATIVE_SPEED As SByte = 33

'Input Output PositionMarker
    'PositionMarkerEdgeType
    Const PET_BOTH_EDGES As Byte = 0
    Const PET_RISING_EDGE As Byte = 1
    Const PET_FALLING_EDGE As Byte = 2

    'PositionMarkerMode
    Const PM_CONTINUOUS As Byte = 0
    Const PM_SINGLE As Byte = 1
    Const PM_MULTIPLE As Byte = 2

'Input Output PositionCompare
    'PositionCompareOperationalMode
    Const PCO_SINGLE_POSITION_MODE As Byte = 0
    Const PCO_POSITION_SEQUENCE_MODE As Byte = 1

    'PositionCompareIntervalMode
    Const PCI_NEGATIVE_DIR_TO_REFPOS As Byte = 0
    Const PCI_POSITIVE_DIR_TO_REFPOS As Byte = 1
    Const PCI_BOTH_DIR_TO_REFPOS As Byte = 2

    'PositionCompareDirectionDependency
    Const PCD_MOTOR_DIRECTION_NEGATIVE As Byte = 0
    Const PCD_MOTOR_DIRECTION_POSITIVE As Byte = 1
    Const PCD_MOTOR_DIRECTION_BOTH As Byte = 2

'Data recorder
    'Trigger type
    Const DR_MOVEMENT_START_TRIGGER As Byte = 1
    Const DR_ERROR_TRIGGER As Byte = 2
    Const DR_DIGITAL_INPUT_TRIGGER As Byte = 4
    Const DR_MOVEMENT_END_TRIGGER As Byte = 8

'CanLayer Functions
    Const NCS_START_REMOTE_NODE As Integer = 1
    Const NCS_STOP_REMOTE_NODE As Integer = 2
    Const NCS_ENTER_PRE_OPERATIONAL As Integer = 128
    Const NCS_RESET_NODE As Integer = 129
    Const NCS_RESET_COMMUNICATION As Integer = 130

'Controller Gains
    'EController
    Const EC_PI_CURRENT_CONTROLLER As Integer = 1
    Const EC_PI_VELOCITY_CONTROLLER As Integer = 10
    Const EC_PI_VELOCITY_CONTROLLER_WITH_OBSERVER As Integer = 11
    Const EC_PID_POSITION_CONTROLLER As Integer = 20
    Const EC_DUAL_LOOP_POSITION_CONTROLLER As Integer = 21

    'EGain (EC_PI_CURRENT_CONTROLLER)
    Const EG_PICC_P_GAIN As Integer = 1
    Const EG_PICC_I_GAIN As Integer = 2

    'EGain (EC_PI_VELOCITY_CONTROLLER)
    Const EG_PIVC_P_GAIN As Integer = 1
    Const EG_PIVC_I_GAIN As Integer = 2
    Const EG_PIVC_FEED_FORWARD_VELOCITY_GAIN As Integer = 10
    Const EG_PIVC_FEED_FORWARD_ACCELERATION_GAIN As Integer = 11

    'EGain (EC_PI_VELOCITY_CONTROLLER_WITH_OBSERVER)
    Const EG_PIVCWO_P_GAIN As Integer = 1
    Const EG_PIVCWO_I_GAIN As Integer = 2
    Const EG_PIVCWO_FEED_FORWARD_VELOCITY_GAIN As Integer = 10
    Const EG_PIVCWO_FEED_FORWARD_ACCELERATION_GAIN As Integer = 11
    Const EG_PIVCWO_OBSERVER_THETA_GAIN As Integer = 20
    Const EG_PIVCWO_OBSERVER_OMEGA_GAIN As Integer = 21
    Const EG_PIVCWO_OBSERVER_TAU_GAIN As Integer = 22

    'EGain (EC_PID_POSITION_CONTROLLER)
    Const EG_PIDPC_P_GAIN As Integer = 1
    Const EG_PIDPC_I_GAIN As Integer = 2
    Const EG_PIDPC_D_GAIN As Integer = 3
    Const EG_PIDPC_FEED_FORWARD_VELOCITY_GAIN As Integer = 10
    Const EG_PIDPC_FEED_FORWARD_ACCELERATION_GAIN As Integer = 11

    'EGain (EC_DUAL_LOOP_POSITION_CONTROLLER)
    Const EG_DLPC_AUXILIARY_LOOP_P_GAIN As Integer = 1
    Const EG_DLPC_AUXILIARY_LOOP_I_GAIN As Integer = 2
    Const EG_DLPC_AUXILIARY_LOOP_FEED_FORWARD_VELOCITY_GAIN As Integer = 10
    Const EG_DLPC_AUXILIARY_LOOP_FEED_FORWARD_ACCELERATION_GAIN As Integer = 11
    Const EG_DLPC_AUXILIARY_LOOP_OBSERVER_THETA_GAIN As Integer = 20
    Const EG_DLPC_AUXILIARY_LOOP_OBSERVER_OMEGA_GAIN As Integer = 21
    Const EG_DLPC_AUXILIARY_LOOP_OBSERVER_TAU_GAIN As Integer = 22
    Const EG_DLPC_MAIN_LOOP_P_GAIN_LOW As Integer = 101
    Const EG_DLPC_MAIN_LOOP_P_GAIN_HIGH As Integer = 102
    Const EG_DLPC_MAIN_LOOP_GAIN_SCHEDULING_WEIGHT As Integer = 110
    Const EG_DLPC_MAIN_LOOP_FILTER_COEFFICIENT_A As Integer = 120
    Const EG_DLPC_MAIN_LOOP_FILTER_COEFFICIENT_B As Integer = 121
    Const EG_DLPC_MAIN_LOOP_FILTER_COEFFICIENT_C As Integer = 122
    Const EG_DLPC_MAIN_LOOP_FILTER_COEFFICIENT_D As Integer = 123
    Const EG_DLPC_MAIN_LOOP_FILTER_COEFFICIENT_E As Integer = 124

End Module
